--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rocicorp/reflect": "^0.35.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "replicache-react": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.22",
