--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rocicorp/rails": "^0.7.1",
     "@rocicorp/reflect": "^0.35.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
