--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@rocicorp/rails": "^0.7.1",
     "@rocicorp/reflect": "^0.35.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "replicache-react": "^3.1.0"
