--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@badrap/valita": "^0.3.0",
     "@rocicorp/rails": "^0.7.1",
-    "@rocicorp/reflect": "^0.36.202310172246",
+    "@rocicorp/reflect": "^0.36.202310310758",
+    "@vercel/node": "^3.0.7",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vite-plugin-svgr": "^4.1.0"
+    "vite-plugin-svgr": "^4.1.0",
+    "vite-plugin-vercel": "^2.0.0"
   }
 }
