refactor: move to nextjs

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "format": "prettier --write './**/*.{js,jsx,json,ts,tsx,html,css,md}'",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -13,24 +15,22 @@
     "@badrap/valita": "^0.3.0",
     "@rocicorp/rails": "^0.7.1",
     "@rocicorp/reflect": "^0.38.202311130825",
-    "@vercel/node": "^3.0.7",
     "classnames": "^2.3.2",
+    "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "replicache-react": "^3.1.0"
   },
   "devDependencies": {
+    "@types/node": "20.9.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vite-plugin-svgr": "^4.1.0",
-    "vite-plugin-vercel": "^2.0.0"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   }
 }
