--- a/reflect/tsconfig.json
+++ b/reflect/tsconfig.json
@@ -5,11 +5,6 @@
     "declaration": true,
     "incremental": true
   },
-  "include": [
-    "**/*.ts",
-    "mutators.ts",
-    "../subscriptions.ts",
-    "model/colors.ts"
-  ],
+  "include": ["**/*.ts"],
   "extends": "../tsconfig.json"
 }
