--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rocicorp/reflect": "^0.38.202311130825",
     "@vercel/og": "^0.5.20",
     "classnames": "^2.3.2",
+    "nanoid": "^5.0.3",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
